--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <title>TheToDoList</title>
-        <link rel="stylesheet" href="styles.css?v=2.12">
+        <link rel="stylesheet" href="styles.css?v=2.13">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body style="background-color: #222;" class="user-select-0">
         <div class="padding-big" style="background-color: #445566; color:#fff;">
             <div class="align-def"><button id="add" class="cursor radius-def padding-big font-size-med outline-0 border-0">Add a task</button></div>
         </div>
-        <div class="padding-big" style="background-color: #344455 ; color:#fff;">
+        <div class="padding-big" style="background-color: #eee ; color:#fff;">
             <div id="read" class="flex-def flex-justify-center flex-wrap flex-gap" style="align-items: flex-start; margin-top: 15px; margin-bottom:15px; justify-content: space-around;"></div>
         </div>
         <div class="align-def padding-big">
@@ -23,6 +23,6 @@
         	</details>
             <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
         </div>
-    <script src="app.js?v=2.12"></script>
+    <script src="app.js?v=2.13"></script>
     </body>
 </html>
