meta description added for google
meta description added for google

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <!-- https://github.com/lobossl/todo -->
     <head>
         <meta charset="UTF-8">
-        <title>TheToDoList</title>
-        <link rel="stylesheet" href="styles.css?v=2.18">
+        <title>The ToDo List - TheToDoList.eu - Simple and free to-do list</title>
+        <meta name="description" content="Simple and free to-do list. Keep track of all your tasks with this easy to use to-do list, no login required with local storage.">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="styles.css?v=2.19">
     </head>
     <body style="background-color: #222;" class="user-select-0">
         <div class="padding-big" style="background-color: #445566; color:#fff;">
@@ -22,8 +23,8 @@
                 <p id="backup" style="color:#ccc;" class="padding-0">Backup</p>
                 <p id="restore"  style="color:#ccc;" class="padding-0">Restore</p>
         	</details>
-            <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
+            <p>TheToDoList.eu</p>
         </div>
-    <script src="app.js?v=2.18"></script>
+    <script src="app.js?v=2.19"></script>
     </body>
 </html>
