--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>The To-Do List - thetodolist.eu - Simple and free to-do list</title>
         <meta name="description" content="Simple and free to-do list. Keep track of all your tasks with this easy to use to-do list, no login required with local storage.">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css?v=3.02">
+        <link rel="stylesheet" href="styles.css?v=3.03">
     </head>
     <body style="background-color: #333; color:orangered;" class="user-select-0">
         <div class="padding-big" style="background-color: #eee; border-bottom:15px solid orangered;">
@@ -14,11 +14,11 @@
                 <p><button id="create" class="outline-0 padding-def border-def">Add a task</button></p>
                 <details>
                     <summary>MENU</summary>
-                    <p id="deleteLocalStorage" class="cursor">Delete localStorage</p>
+                    <p id="deleteLocalStorage" class="cursor">[!] Delete entire storage</p>
                   </details> 
             </div>
         </div>
         <div id="read" class="flex-def flex-gap flex-wrap flex-center padding-def"></div>
-    <script src="app.js?v=3.02"></script>
+    <script src="app.js?v=3.03"></script>
     </body>
 </html>
