--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="padding-big" style="background-color: #eee; border-bottom:15px solid orangered;">
             <div class="align-def">
                 <p><input type="text" id="title" placeholder="Title:" class="outline-0 padding-def border-def"></p>
-                <p><button id="create" class="outline-0 padding-def border-def">Add a task</button></p>
+                <p><button id="create" class="outline-0 padding-def border-def">+</button></p>
                 <details>
                     <summary>MENU</summary>
-                    <p id="deleteLocalStorage" class="cursor">[!] Delete entire storage</p>
+                    <p id="deleteLocalStorage" class="cursor">[!] Reset localStorage</p>
                   </details> 
             </div>
         </div>
         <div id="read" class="flex-def flex-gap flex-wrap flex-center padding-def"></div>
-    <script src="app.js?v=3.05"></script>
+    <script src="app.js?v=3.06"></script>
     </body>
 </html>
