--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>The To-Do List - thetodolist.eu - Simple and free to-do list</title>
         <meta name="description" content="Simple and free to-do list. Keep track of all your tasks with this easy to use to-do list, no login required with local storage.">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css?v=2.1">
+        <link rel="stylesheet" href="styles.css?v=2.2">
     </head>
     <body class="user-select-0 align-def" style="background-color: #EEEEEE; font-family:Verdana, Geneva, Tahoma, sans-serif;">
-        <button id="addButton" class="padding-def margin-def">Add</button>
+        <button id="addButton" class="padding-def margin-def font-size-med radius-def border-def bold-def">Add</button>
         <div id="boxes"></div>
         <pre>Copyrights TheToDoList.eu</pre>
-    <script src="app.js?v=2.1"></script>
+    <script src="app.js?v=2.2"></script>
     </body>
 </html>
