--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>The To-Do List - Simple and free to-do list</title>
-        <meta name="description" content="Simple and free to-do list. Keep track of all your tasks with this easy to use to-do list, no login required with local storage.">
+        <meta name="description" content="Simple and free to-do list. Keep track of all your tasks with this easy to use to-do list, no login required.">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css?v=10.1.0">
+        <link rel="stylesheet" href="styles.css?v=10.1.1">
     </head>
     <body class="user-select-0 align-def" style="background-color: #EEEEEE; font-family:Verdana, Geneva, Tahoma, sans-serif;">
         <button id="addButton" class="padding-def margin-def font-size-med radius-def border-def bold-def">New</button>
         <button id="clearButton" class="padding-def margin-def font-size-med radius-def border-def bold-def" style="color: red;">Delete All</button>
         <div id="boxes"></div>
-        <pre>Copyrights TheToDoList.eu</pre>
-    <script src="app.js?v=10.1.0"></script>
+        <pre>Copyrights TheToDoList.eu (LoboSSL)</pre>
+    <script src="app.js?v=10.1.1"></script>
     </body>
 </html>
