--- a/index.html
+++ b/index.html
@@ -4,33 +4,31 @@
     <meta charset="UTF-8">
     <title>Project X</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?version=0.0.1">
+    <link rel="stylesheet" href="design.css?version=0.0.2">
 </head>
     <body class="padding-0 margin-0 align-def" style="font-family:Verdana, Geneva, Tahoma, sans-serif; color:#333; background-color: #111;">
-        <div id="master" class="flex-def flex-wrap flex-gap" style="color:#fff; background-color: #222;">
+        <div id="master" class="flex-def flex-wrap flex-gap" style="color:#ffffff; background-color: #222222;">
             <div id="todo" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p style="color:silver;" class="font-size-med">Todo:</p>
                 <p><input type="text" id="todoText" class="padding-def outline-0 border-0 radius-def" style="background-color: #eee;" placeholder="Todo:"></p>
                 <p>
-                    <button id="addTodo" class="padding-def font-size-def radius-def border-0 outline-0" style="background-color: #000; color:#fff;">Add</button>
-                    <button id="deleteTodo" class="padding-def font-size-def radius-def border-0 outline-0" style="background-color: #000; color:red;">Delete</button>
+                    <button id="addTodo" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #222222; color:#ffffff;">Add</button>
+                    <button id="deleteTodo" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #6d0e0e; color:#ffffff;">Delete</button>
                 </p>
-                <div id="innerTodo" class="padding-def border-def radius-def word-break" style="background-color: #222;"></div>
+                <div id="innerTodo" class="padding-def border-0 word-break"></div>
             </div>
-            <div id="food" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
-                <p style="color:silver;" class="font-size-med">Recipes:</p>
-                <p><textarea id="foodText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; background-color: #eee;" placeholder="Recipe:"></textarea></p>
+            <div id="recipe" class="margin-def align-def border-def padding-def flex-size-1 radius-def" style="background-color: #333;">
+                <p><textarea id="recipeText" class="padding-def outline-0 border-0 radius-def" style="resize:none; height:200px; width:75%; background-color: #eee;" placeholder="Recipe:"></textarea></p>
                 <p>
-                    <button id="addFood" class="padding-def font-size-def radius-def border-0 outline-0" style="background-color: #000; color:#fff;">Add</button>
-                    <button id="deleteFood" class="padding-def font-size-def radius-def border-0 outline-0" style="background-color: #000; color:red;">Delete</button>
+                    <button id="addRecipe" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #222222; color:#ffffff;">Add</button>
+                    <button id="deleteRecipe" class="padding-def font-size-def radius-def border-0 outline-0 margin-0" style="background-color: #6d0e0e; color:#ffffff;">Delete</button>
                 </p>
-                <div id="innerFood" class="padding-def border-def radius-def word-break" style="background-color: #222;"></div>
+                <div id="innerRecipe" class="padding-def border-0 word-break"></div>
             </div>
         </div>
         <div style="padding:100px;">
             <p>Copyright &copy; <a href="https://github.com/lobossl/todo">[github]</a></p>
             <p>TheToDoList.eu</p>
         </div>
-        <script src="app.js?version=0.0.1"></script>
+        <script src="app.js?version=0.0.2"></script>
     </body>
 </html>
